[B]Retrospect v5.7.x - Changelog - 2025-xx-xx[/B]

t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: NPO Luister radio stations.
* Fixed: SRF Channel.